# subtitle-extractor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: main.cpp  subextractor.cpp
